[gd_scene load_steps=9 format=2]

[ext_resource path="res://start-assets/movingobj.png" type="Texture" id=1]
[ext_resource path="res://Object/MovingObj.gd" type="Script" id=2]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 color : hint_color;
uniform float speed:hint_range(0,20);
uniform float width:hint_range(0,1);
void fragment() {
	vec2 center=vec2(0.5);
	float time=TIME*speed;
	float thickness=width+0.05*cos(time);
	float dist=distance(UV,center);
	COLOR.rgb = color.rgb;
	COLOR.a = texture(TEXTURE, UV).a+smoothstep(thickness/2.0,0.0,abs(dist));
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/color = Color( 0.780392, 1, 1, 1 )
shader_param/speed = 1.0
shader_param/width = 0.0

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;
uniform vec4 color : hint_color;
uniform float speed:hint_range(0,20);
uniform float width:hint_range(0,1);
void fragment() {
	vec2 center=vec2(0.5);
	float time=TIME*speed;
	float thickness=width+0.05*cos(time);
	float dist=distance(UV,center);
	COLOR.rgb = color.rgb;
	COLOR.a = texture(TEXTURE, UV).a+smoothstep(thickness/2.0,0.0,abs(dist));
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/color = Color( 0.0666667, 0.87451, 0.760784, 1 )
shader_param/speed = 2.299
shader_param/width = 0.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 79.9316, 27 )

[sub_resource type="Animation" id=6]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.5, 0.4 ), Vector2( 1e-05, 0.7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="MovingObj" type="Area2D" groups=[
"blocks",
]]
material = SubResource( 2 )
position = Vector2( 249.065, 426.692 )
collision_layer = 4
collision_mask = 11
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 4 )
scale = Vector2( 1.5, 0.4 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2( 1.5, 1 )
shape = SubResource( 5 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="MoveTween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/free = SubResource( 6 )
[connection signal="area_entered" from="." to="." method="_on_MovingObj_area_entered"]
[connection signal="body_exited" from="." to="." method="_on_MovingObj_body_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="tween_completed" from="MoveTween" to="." method="set_tween"]
